--- a/charts/wa-workflow-api/values.yaml
+++ b/charts/wa-workflow-api/values.yaml
@@ -21,8 +21,8 @@ java:
   keyVaults:
     wa:
       secrets:
-        - name: AppInsightsInstrumentationKey
-          alias: azure.application-insights.instrumentation-key
+        - name: app-insights-connection-string
+          alias: app-insights-connection-string
         - name: s2s-secret-workflow-api
           alias: S2S_SECRET_WORKFLOW_API
         - name: workflow-api-POSTGRES-PASS
