--- a/build.gradle
+++ b/build.gradle
@@ -301,6 +301,8 @@ ext.libraries = [
   ]
 ]
 
+ext['snakeyaml.version'] = '1.31'
+
 dependencies {
 
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
