--- a/build.gradle
+++ b/build.gradle
@@ -1,31 +1,21 @@
-buildscript {
-  repositories {
-    mavenCentral()
-  }
-  dependencies {
-    classpath("net.serenity-bdd:serenity-gradle-plugin:3.2.0")
-  }
-}
-
 plugins {
+  id 'idea'
   id 'application'
   id 'checkstyle'
   id 'pmd'
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.0.13.RELEASE'
   id 'org.springframework.boot' version '2.7.4'
-  id 'org.owasp.dependencycheck' version '7.1.2'
+  id 'org.owasp.dependencycheck' version '7.2.1'
   id 'com.github.ben-manes.versions' version '0.42.0'
   id 'org.sonarqube' version '3.4.0.2513'
   id 'info.solidsoft.pitest' version '1.9.0'
   id 'io.freefair.lombok' version '6.5.1'
-  id 'org.flywaydb.flyway' version '9.2.2'
+  id 'org.flywaydb.flyway' version '9.4.0'
+  id 'net.serenity-bdd.serenity-gradle-plugin' version '3.2.0'
   // If Pact version is changed, make sure serenity report works.
   id 'au.com.dius.pact' version '4.1.8'
 }
-
-apply plugin: 'net.serenity-bdd.aggregator'
-apply plugin: 'idea'
 
 group = 'uk.gov.hmcts.reform'
 version = '0.0.1'
@@ -176,7 +166,7 @@ jacocoTestReport {
 }
 
 pitest {
-  junit5PluginVersion = '1.0.0'
+  junit5PluginVersion = '1.1.0'
   targetClasses = ['uk.gov.hmcts.reform.waworkflowapi.*']
   excludedClasses = [
     'uk.gov.hmcts.reform.waworkflowapi.config.*',
@@ -252,19 +242,19 @@ repositories {
 }
 
 def versions = [
-  junit         : '5.9.0',
-  junitPlatform : '1.9.0',
+  junit         : '5.9.1',
+  junitPlatform : '1.9.1',
   reformLogging : '5.1.9',
   springDoc     : '1.6.6',
   serenity      : '3.2.0',
   gradlePitest  : '1.9.0',
-  pitest        : '1.9.4',
+  pitest        : '1.9.6',
   sonarPitest   : '0.5',
   camunda       : '7.14.0',
   logbook       : '2.6.2',
   pactVersion   : '4.1.7',
-  testcontainers: '1.17.3',
-  log4j         : '2.18.0'
+  testcontainers: '1.17.4',
+  log4j         : '2.19.0'
 ]
 
 ext.libraries = [
@@ -293,7 +283,7 @@ dependencies {
 
   implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: versions.springDoc
 
-  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.1.3'
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.1.4'
 
   implementation group: 'org.zalando', name: 'logbook-spring-boot-starter', version: versions.logbook
   implementation 'org.zalando:problem-spring-web-starter:0.27.0'
@@ -301,7 +291,7 @@ dependencies {
   implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: versions.reformLogging
   implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '4.0.3'
 
-  implementation group: 'org.flywaydb', name: 'flyway-core', version: '9.2.2'
+  implementation group: 'org.flywaydb', name: 'flyway-core', version: '9.4.0'
   implementation group: 'org.postgresql', name: 'postgresql', version: '42.5.0'
 
   implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: versions.log4j
