--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
   id 'pmd'
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.0.13.RELEASE'
-  id 'org.springframework.boot' version '2.7.4'
+  id 'org.springframework.boot' version '2.7.5'
   id 'org.owasp.dependencycheck' version '7.2.1'
   id 'com.github.ben-manes.versions' version '0.42.0'
   id 'org.sonarqube' version '3.4.0.2513'
@@ -232,6 +232,30 @@ dependencyManagement {
     }
 
     dependency group: 'commons-io', name: 'commons-io', version: '2.11.0'
+
+    dependencySet( group: 'org.springframework.security', version: '5.7.5'){
+      entry 'spring-boot-starter-security'
+      entry 'spring-security-core'
+      entry 'spring-security-acl'
+      entry 'spring-security-aspects'
+      entry 'spring-security-cas'
+      entry 'spring-security-config'
+      entry 'spring-security-crypto'
+      entry 'spring-security-data'
+      entry 'spring-security-ldap'
+      entry 'spring-security-messaging'
+      entry 'spring-security-oauth2-client'
+      entry 'spring-security-oauth2-core'
+      entry 'spring-security-oauth2-jose'
+      entry 'spring-security-oauth2-resource-server'
+      entry 'spring-security-openid'
+      entry 'spring-security-remoting'
+      entry 'spring-security-rsocket'
+      entry 'spring-security-saml2-service-provider'
+      entry 'spring-security-taglibs'
+      entry 'spring-security-test'
+      entry 'spring-security-web'
+    }
   }
 }
 
@@ -279,7 +303,6 @@ dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-resource-server'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-rest'
-  implementation group: 'org.springframework.security', name: 'spring-security-test', version: '5.7.2'
 
   implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: versions.springDoc
 
@@ -297,8 +320,8 @@ dependencies {
   implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: versions.log4j
   implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: versions.log4j
 
-  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.65'
-  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '9.0.65'
+  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.68'
+  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '9.0.68'
 
   implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.5.Final'
 
