--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
   id 'checkstyle'
   id 'pmd'
   id 'jacoco'
-  id 'io.spring.dependency-management' version '1.0.13.RELEASE'
+  id 'io.spring.dependency-management' version '1.1.0'
   id 'org.springframework.boot' version '2.7.5'
   id 'org.owasp.dependencycheck' version '7.2.1'
   id 'com.github.ben-manes.versions' version '0.42.0'
@@ -14,7 +14,7 @@ plugins {
   id 'org.flywaydb.flyway' version '9.4.0'
   id 'net.serenity-bdd.serenity-gradle-plugin' version '3.2.0'
   // If Pact version is changed, make sure serenity report works.
-  id 'au.com.dius.pact' version '4.1.8'
+  id 'au.com.dius.pact' version '4.3.8'
 }
 
 group = 'uk.gov.hmcts.reform'
@@ -261,8 +261,8 @@ dependencyManagement {
 
 repositories {
   mavenLocal()
-  maven { url 'https://jitpack.io' }
   mavenCentral()
+  maven { url 'https://jitpack.io' }
 }
 
 def versions = [
@@ -278,7 +278,8 @@ def versions = [
   logbook       : '2.6.2',
   pactVersion   : '4.1.7',
   testcontainers: '1.17.4',
-  log4j         : '2.19.0'
+  log4j         : '2.19.0',
+  tomcat        : '9.0.68'
 ]
 
 ext.libraries = [
@@ -312,8 +313,8 @@ dependencies {
   implementation 'org.zalando:problem-spring-web-starter:0.27.0'
 
   implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: versions.reformLogging
-  implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '4.0.3'
-
+  implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '4.1.0'
+  implementation group: 'io.github.openfeign', name: 'feign-jackson', version: '11.10'
   implementation group: 'org.flywaydb', name: 'flyway-core', version: '9.4.0'
   implementation group: 'org.postgresql', name: 'postgresql', version: '42.5.0'
 
@@ -325,7 +326,7 @@ dependencies {
 
   implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.5.Final'
 
-  implementation group: 'org.camunda.bpm', name: 'camunda-external-task-client', version: '7.17.0'
+  implementation group: 'org.camunda.bpm', name: 'camunda-external-task-client', version: '7.18.0'
 
   implementation group: 'javax.xml', name: 'jaxb-api', version: '2.1'
 
@@ -358,7 +359,7 @@ dependencies {
 
   testImplementation group: 'org.junit.vintage', name: 'junit-vintage-engine', version: versions.junit
 
-  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.2.2'
+  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.3.0'
 
   //Pact contract testing
   contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: versions.pactVersion
