--- a/build.gradle
+++ b/build.gradle
@@ -12,17 +12,23 @@ plugins {
   id 'info.solidsoft.pitest' version '1.9.0'
   id 'io.freefair.lombok' version '6.5.1'
   id 'org.flywaydb.flyway' version '9.4.0'
-  id 'net.serenity-bdd.serenity-gradle-plugin' version '3.2.0'
   // If Pact version is changed, make sure serenity report works.
+  id 'net.serenity-bdd.serenity-gradle-plugin' version '3.2.3'
   id 'au.com.dius.pact' version '4.1.8'
 }
 
 group = 'uk.gov.hmcts.reform'
 version = '0.0.1'
 
-allprojects {
-  sourceCompatibility = '11'
-  targetCompatibility = '11'
+java {
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(17)
+  }
+}
+
+// https://github.com/gradle/gradle/issues/16791
+tasks.withType(JavaExec).configureEach {
+  javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
 }
 
 sourceSets {
@@ -149,7 +155,7 @@ checkstyle {
 }
 
 pmd {
-  toolVersion = "6.18.0"
+  toolVersion = "6.40.0"
   sourceSets = [sourceSets.main]
   reportsDir = file("$project.buildDir/reports/pmd")
   // https://github.com/pmd/pmd/issues/876
@@ -339,7 +345,7 @@ dependencies {
     exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
   }
 
-  testImplementation group: 'pl.pojo', name: 'pojo-tester', version: '0.7.6'
+  testImplementation group: 'com.obsidiandynamics.pojotester', name: 'core', version: '0.9.0'
   testImplementation group: 'com.google.guava', name: 'guava-testlib', version: '31.1-jre'
   testImplementation group: 'com.jparams', name: 'to-string-verifier', version: '1.4.8'
 
