Support json type in initiation DMN(RWA-1773) (#546)
* Support json type in initiation DMN(RWA-1773)

* resolve cve issue

* Update Swagger publisher

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -27,6 +27,8 @@ wa-task-management-api:
 govUkHolidays:
   url: https://www.gov.uk/
 
+springdoc:
+  writer-with-order-by-keys: true
 spring:
   config:
     import: "optional:configtree:/mnt/secrets/wa/"
