Rwa 2918 grant access to reader (#622)
Co-authored-by: hmcts-jenkins-j-to-z <61242337+hmcts-jenkins-j-to-z[bot]@users.noreply.github.com>

--- a/charts/wa-workflow-api/values.preview.template.yaml
+++ b/charts/wa-workflow-api/values.preview.template.yaml
@@ -10,6 +10,7 @@ java:
     POSTGRES_USERNAME: hmcts
     POSTGRES_PASSWORD: hmcts
     POSTGRES_CONNECTION_OPTIONS: ""
+    DB_READER_USERNAME: "postgres"
   keyVaults:
     wa:
       secrets:
