--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -20,8 +20,9 @@
       ]
     }
   ],
+  "automergeSchedule": "after 8:30am and before 10:30am Monday to Thursday",
+  "prCreation": "not-pending",
   "automergeType": "pr",
-  "automergeSchedule": "after 8:30am and before 10:30am Monday to thursday",
   "packageRules": [
     {
       "matchUpdateTypes": [
@@ -37,16 +38,22 @@
       ],
       "prPriority": 10,
       "automerge": false,
-      "groupName": "Terraform"
+      "groupName": "Terraform Upgrades",
+      "automergeSchedule": "after 8am and before 11am every fifth of Month"
     },
     {
       "matchPackagePrefixes": [
         "org.springframework",
         "io.spring"
       ],
+      "matchUpdateTypes": [
+        "minor",
+        "patch"
+      ],
       "prPriority": 80,
       "automerge": false,
-      "groupName": "Spring All"
+      "groupName": "Spring Upgrade (Non Major)",
+      "automergeSchedule": "after 8am and before 11am every Tuesday"
     },
     {
       "matchPackagePatterns": [
@@ -54,19 +61,23 @@
         "pitest",
         "pact"
       ],
+      "matchUpdateTypes": [
+        "minor",
+        "patch"
+      ],
       "prPriority": 20,
       "automerge": false,
-      "groupName": "QA & Nightly Checks"
+      "groupName": "QA & Nightly Checks (Non Major)",
+      "automergeSchedule": "after 8am and before 11am every first day of month"
     },
     {
       "matchPackagePatterns": [
         "hmcts:java-logging",
         "log4j",
-        "slf4j",
-        "logback"
+        "slf4j"
       ],
       "prPriority": 30,
-      "groupName": "Logging"
+      "groupName": "Logging Dependencies"
     },
     {
       "matchPackagePatterns": [
@@ -75,21 +86,29 @@
         "checkstyle",
         "jacoco"
       ],
-      "prPriority": 20,
-      "groupName": "Automated Checks"
-    },
-    {
-      "matchPackagePatterns": [
-        "assertj",
-        "junit",
-        "jupiter",
-        "powermock",
-        "mockito",
-        "h2database",
-        "testcontainers"
+      "matchUpdateTypes": [
+        "minor",
+        "patch"
       ],
       "prPriority": 20,
-      "groupName": "Testing"
+      "groupName": "Automated Checks (Non Major)",
+      "automergeSchedule": "after 8am and before 11am every first day of month"
+    },
+    {
+      "matchPackagePrefixes": [
+        "org.assertj",
+        "org.junit",
+        "org.mockito",
+        "com.h2database",
+        "org.testcontainers"
+      ],
+      "matchUpdateTypes": [
+        "minor",
+        "patch"
+      ],
+      "prPriority": 20,
+      "groupName": "Testing Dependencies (Non Major)",
+      "automergeSchedule": "after 8am and before 11am every Monday"
     }
   ]
 }
