--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
   id 'pmd'
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.1.4'
-  id 'org.springframework.boot' version '2.7.18'
+  id 'org.springframework.boot' version '3.3.0'
   id 'org.owasp.dependencycheck' version '9.2.0'
   id 'com.github.ben-manes.versions' version '0.51.0'
   id 'org.sonarqube' version '4.4.1.3373'
@@ -238,14 +238,14 @@ dependencyManagement {
       entry 'guava'
     }
 
-    dependencySet(group: 'ch.qos.logback', version: '1.2.13') {
+    dependencySet(group: 'ch.qos.logback', version: '1.5.6') {
       entry 'logback-classic'
       entry 'logback-core'
     }
 
     dependency group: 'commons-io', name: 'commons-io', version: '2.15.1'
 
-    dependencySet( group: 'org.springframework.security', version: '5.8.10'){
+    dependencySet( group: 'org.springframework.security', version: '6.0.8'){
       entry 'spring-boot-starter-security'
       entry 'spring-security-core'
       entry 'spring-security-acl'
@@ -282,7 +282,7 @@ def versions = [
   junitPlatform : '1.10.2',
   reformLogging : '6.1.4',
   springDoc     : '1.7.0',
-  serenity      : '3.2.0',
+  serenity      : '3.4.2',
   gradlePitest  : '1.15.0',
   pitest        : '1.12.0',
   sonarPitest   : '0.5',
@@ -291,7 +291,7 @@ def versions = [
   pactVersion   : '4.1.7',
   testcontainers: '1.19.8',
   log4j         : '2.23.1',
-  tomcat        : '9.0.86'
+  tomcat        : '10.1.16'
 ]
 
 ext.libraries = [
@@ -317,9 +317,9 @@ dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-resource-server'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-rest'
 
-  implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: versions.springDoc
+  implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.2.0'
 
-  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.1.9'
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '4.1.1'
 
   implementation group: 'org.springframework.security', name: 'spring-security-rsa', version: '1.1.1'
 
@@ -327,8 +327,9 @@ dependencies {
   implementation 'org.zalando:problem-spring-web-starter:0.27.0'
 
   implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: versions.reformLogging
-  implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '4.1.2'
+  implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '5.1.2'
   implementation group: 'io.github.openfeign', name: 'feign-jackson', version: '13.2.1'
+
   implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.5'
   implementation group: 'org.flywaydb', name: 'flyway-core', version: '9.22.3'
   implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.2'
@@ -339,7 +340,7 @@ dependencies {
   implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: versions.tomcat
   implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: versions.tomcat
 
-  implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.15.Final'
+  implementation group: 'org.hibernate', name: 'hibernate-core', version: '6.5.2.Final'
 
   implementation group: 'org.camunda.bpm', name: 'camunda-external-task-client', version: '7.20.0'
 
