--- a/build.gradle
+++ b/build.gradle
@@ -8,10 +8,10 @@ plugins {
   id 'org.springframework.boot' version '3.3.0'
   id 'org.owasp.dependencycheck' version '9.2.0'
   id 'com.github.ben-manes.versions' version '0.51.0'
-  id 'org.sonarqube' version '4.4.1.3373'
+  id 'org.sonarqube' version '5.0.0.4638'
   id 'info.solidsoft.pitest' version '1.15.0'
-  id 'io.freefair.lombok' version '6.6.3'
-  id 'org.flywaydb.flyway' version '9.22.3'
+  id 'io.freefair.lombok' version '8.6'
+  id 'org.flywaydb.flyway' version '10.15.0'
   // If Pact version is changed, make sure serenity report works.
   id 'net.serenity-bdd.serenity-gradle-plugin' version '3.2.3'
   id 'au.com.dius.pact' version '4.1.8'
@@ -157,7 +157,7 @@ checkstyle {
 pmd {
   toolVersion = "6.55.0"
   sourceSets = [sourceSets.main]
-  reportsDir = file("$project.buildDir/reports/pmd")
+  reportsDir = layout.buildDirectory.dir("reports/pmd").get().asFile
   // https://github.com/pmd/pmd/issues/876
   ruleSets = []
   ruleSetFiles = files("config/pmd/ruleset.xml")
@@ -168,7 +168,7 @@ jacocoTestReport {
   reports {
     xml.required = true
     csv.required = false
-    xml.destination file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
+    xml.outputLocation.set(layout.buildDirectory.file("reports/jacoco/test/jacocoTestReport.xml"))
   }
 }
 
@@ -197,7 +197,7 @@ sonarqube {
   properties {
     property "sonar.projectName", "Reform :: wa-workflow-api"
     property "sonar.projectKey", "uk.gov.hmcts.reform:wa-workflow-api"
-    property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.destination.path}"
+    property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.outputLocation.get().asFile.absolutePath}"
     property "sonar.pitest.mode", "reuseReport"
     property "sonar.pitest.reportsDirectory", "build/reports/pitest"
     property "sonar.exclusions", "src/main/java/uk/gov/hmcts/reform/waworkflowapi/config/**," +
