--- a/docker-pactbroker-compose.yml
+++ b/docker-pactbroker-compose.yml
@@ -9,7 +9,7 @@ services:
     - "5432:5432"
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
+      POSTGRES_PASSWORD: ${GENERIC_DOCKER_PACT_BROKER_YAML_PASS}
       POSTGRES_DB: postgres
 
   broker_app:
@@ -20,7 +20,7 @@ services:
     - "80:80"
     environment:
       PACT_BROKER_DATABASE_USERNAME: postgres
-      PACT_BROKER_DATABASE_PASSWORD: password
+      PACT_BROKER_DATABASE_PASSWORD: ${GENERIC_DOCKER_PACT_BROKER_YAML_PASS}
       PACT_BROKER_DATABASE_HOST: postgres
       PACT_BROKER_DATABASE_NAME: postgres
       PACT_BROKER_WEBHOOK_SCHEME_WHITELIST: http
