--- a/build.gradle
+++ b/build.gradle
@@ -4,17 +4,17 @@ plugins {
   id 'checkstyle'
   id 'pmd'
   id 'jacoco'
-  id 'io.spring.dependency-management' version '1.1.6'
-  id 'org.springframework.boot' version '3.3.4'
-  id 'org.owasp.dependencycheck' version '12.1.1'
+  id 'io.spring.dependency-management' version '1.1.7'
+  id 'org.springframework.boot' version '3.5.0'
+  id 'org.owasp.dependencycheck' version '12.1.3'
   id 'com.github.ben-manes.versions' version '0.51.0'
-  id 'org.sonarqube' version '6.0.1.5171'
+  id 'org.sonarqube' version '6.2.0.5505'
   id 'info.solidsoft.pitest' version '1.15.0'
   id 'org.flywaydb.flyway' version '10.22.0'
   id 'io.freefair.lombok' version '8.11'
   // If Pact version is changed, make sure serenity report works.
-  id 'net.serenity-bdd.serenity-gradle-plugin' version '4.2.14'
-  id 'au.com.dius.pact' version '4.6.14'
+  id 'net.serenity-bdd.serenity-gradle-plugin' version '4.2.33'
+  id 'au.com.dius.pact' version '4.6.17'
 }
 
 group = 'uk.gov.hmcts.reform'
@@ -152,7 +152,7 @@ task fortifyScan(type: JavaExec) {
 
 checkstyle {
   maxWarnings = 0
-  toolVersion = '10.21.2'
+  toolVersion = '10.25.0'
   getConfigDirectory().set(new File(rootDir, 'config/checkstyle'))
 }
 
@@ -176,6 +176,7 @@ jacocoTestReport {
 
 pitest {
   junit5PluginVersion = '1.2.1'
+  pitestVersion = '1.19.5'
   targetClasses = ['uk.gov.hmcts.reform.waworkflowapi.*']
   excludedClasses = [
     'uk.gov.hmcts.reform.waworkflowapi.config.*',
@@ -247,7 +248,7 @@ dependencyManagement {
 
     dependency group: 'commons-io', name: 'commons-io', version: '2.18.0'
 
-    dependencySet( group: 'org.springframework.security', version: '6.3.3'){
+    dependencySet( group: 'org.springframework.security', version: '6.5.0'){
       entry 'spring-boot-starter-security'
       entry 'spring-security-core'
       entry 'spring-security-acl'
@@ -282,20 +283,20 @@ repositories {
 }
 
 def versions = [
-  junit         : '5.11.4',
-  junitPlatform : '1.11.4',
+  junit         : '5.13.1',
+  junitPlatform : '1.13.1',
   reformLogging : '6.1.9',
   springDoc     : '1.7.0',
-  serenity      : '4.2.0',
+  serenity      : '4.2.34',
   gradlePitest  : '1.15.0',
-  pitest        : '1.16.3',
+  pitest        : '1.19.5',
   sonarPitest   : '0.5',
   camunda       : '7.14.0',
   logbook       : '3.10.0',
-  pactVersion   : '4.6.14',
-  testcontainers: '1.20.4',
+  pactVersion   : '4.6.17',
+  testcontainers: '1.21.1',
   log4j         : '2.24.3',
-  tomcat        : '10.1.33'
+  tomcat        : '10.1.42'
 ]
 
 ext.libraries = [
@@ -321,9 +322,9 @@ dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-resource-server'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-rest'
 
-  implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.6.0'
+  implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.8.9'
 
-  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '4.1.3'
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '4.3.0'
 
   implementation group: 'org.springframework.security', name: 'spring-security-rsa', version: '1.1.5'
 
